--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>DESARROLLADOR Web</title>
+    <title>Portafolio Web David Díaz</title>
     
     <meta name="author" content="DAVID">
 
