--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <!-- header -->
           <div id="navbarNav" class="offcanvas offcanvas-end">
             <div class="offcanvas-header border-bottom">
-              <h5 class="offcanvas-title">Menu Yomatica</h5>
+              <h5 class="offcanvas-title">Menu</h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -195,7 +195,7 @@
           </div>
 
           <!-- Title -->
-          <h1>Desarrollador Fullstack</h1>
+          <h1>Desarrollador web FRONTEND</h1>
           <p class="fs-lg text-light opacity-70">Desarrollador web portafolio</p>
 
           <!-- Author -->
