--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="col-lg-6 col-md-7 offset-xl-1">
               <div class="position-relative d-flex flex-column align-items-center justify-content-center h-100">
                 <svg class="d-none d-md-block position-absolute top-50 start-0 translate-middle-y" width="868" height="868" style="min-width: 868px;" viewBox="0 0 868 868" fill="none" xmlns="http://www.w3.org/2000/svg"><circle opacity="0.15" cx="434" cy="434" r="434" fill="#6366F1"/></svg>
-                <img src="assets/img/about/cta.png" class="position-absolute zindex-3 mb-2 my-lg-4" width="382" alt="Illustration">
+                <img src="assets/img/about/cta.png" class="position-relative zindex-3 mb-2 my-lg-4" width="382" alt="Illustration">
               </div>
             </div>
           </div>
